test/error/parsing_files/semi_err09.err
File "parsing_files/semi_err09.st", line 1, characters 6-7:
1 | f := : int.
         ^
Error: Syntax error.
Hint: Cannot have ':' after ":=".
